Working on updating activities, still not done